# ARC_detector

./: .gitignore  CMakeLists.txt  README.md  RadiatorCell_FinaOptimisation_converted.xml  arc_reco_v0.C  arc_v0_steering.py  arcfullsim.py  arcsim.py  barrelsim.py  endcapsim.py  material_scan.py  ofile_sensor_pos_endcap.txt  run_overlap.sh  run_overlap_barrel.sh  run_overlap_endcap.sh  run_overlap_full.sh  run_vis.sh  run_vis_endcap.sh  steering.py  vis.mac
ARCalg/: CMakeLists.txt
ARCalg/include/: ARCalg.h  ArcQuarticEquation.h  Reconstruction.h  test.h
ARCalg/src/: ARCalg.cpp  ArcQuarticEquation.cpp  Reconstruction.cpp  test.cpp
ARCalg/test/: runARCalg.py
cellParameters/: ARC_par_reader.cpp  RadiatorCell_FinaOptimisation.txt  RadiatorCell_FinaOptimisation_converted.xml
compact/: RadiatorCell_FinaOptimisation.xml  arc_barrel_v0.xml  arc_endcap_v0.xml  arc_full_v0.xml  arc_v0.xml  materials.xml
myscripts/: material_plot.py  material_plot_cosTheta.py  material_scan.py  overlap.mac  plot_ROOTgeo.py  vis.mac  vis_ddsim_qt.sh
src/: ARC_barrel_geo.cpp  ARC_endcap_geo.cpp  ARC_geo.cpp  ARC_geo_cell0.cpp  ARC_par_reader.hpp
